refactoring the logic to check the correct answers to the questionnaires with those given by the user